feat(changeset): separate closing changeset entities and try closing changeset files and sync (#28)
* feat(configurations): route timeout duration

* feat(changeset): saperate closing changeset entities and try closing changeset files and sync

* docs(configurations): added isolation level configurtion to readme

* refactor(changeset): changes according to pr
