# openapi3.yaml
@@ -335,6 +335,48 @@ paths:
           $ref: '#/components/responses/NotFound'
         5XX:
           $ref: '#/components/responses/UnexpectedError'
+  /changeset/{changesetId}/entities:
+    patch:
+      summary: close the entities of the changeset
+      description: >-
+        closes the changeset, sets all its entities as done
+      parameters:
+        - $ref: '#/components/parameters/changesetId'
+      operationId: closeChangesetEntities
+      tags:
+        - changeset
+      responses:
+        '200':
+          description: OK
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        5XX:
+          $ref: '#/components/responses/UnexpectedError'
+  /changeset/close/_bulk:
+    put:
+      summary: close the changeset file or sync if needed
+      description: >-
+        checks if the file or sync are completed
+      requestBody:
+        description: the changeset ids to check for close
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/uniqueId'
+      operationId: closeChangesets
+      tags:
+        - changeset
+      responses:
+        '200':
+          description: OK
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        5XX:
+          $ref: '#/components/responses/UnexpectedError'
 components:
   responses:
     BadRequest:
