# src/changeset/controllers/changesetController.ts
@@ -12,6 +12,8 @@ import { ChangesetAlreadyExistsError, ChangesetNotFoundError, ExceededNumberOfRe
 type PostChangesetHandler = RequestHandler<undefined, string, Changeset>;
 type PatchChangesetHandler = RequestHandler<{ changesetId: string }, string, UpdateChangeset>;
 type PutChangesetHandler = RequestHandler<{ changesetId: string }, string, undefined>;
+type PatchChangesetEntitiesHandler = RequestHandler<{ changesetId: string }, string, undefined>;
+type PutChangesetsHandler = RequestHandler<undefined, string, string[]>;
 
 const txtplain = mime.contentType('text/plain') as string;
 
@@ -53,6 +55,30 @@ export class ChangesetController {
       }
       if (error instanceof ExceededNumberOfRetriesError) {
         this.logger.info(`could not close changeset ${req.params.changesetId} number of retries exceeded`);
+      }
+      return next(error);
+    }
+  };
+
+  public patchChangesetEntities: PatchChangesetEntitiesHandler = async (req, res, next) => {
+    try {
+      await this.manager.updateChangesetEntities(req.params.changesetId);
+      return res.status(httpStatus.OK).type(txtplain).send(httpStatus.getStatusText(httpStatus.OK));
+    } catch (error) {
+      if (error instanceof ChangesetNotFoundError) {
+        (error as HttpError).status = StatusCodes.NOT_FOUND;
+      }
+      return next(error);
+    }
+  };
+
+  public putChangesets: PutChangesetsHandler = async (req, res, next) => {
+    try {
+      await this.manager.closeChangesets(req.body);
+      return res.status(httpStatus.OK).type(txtplain).send(httpStatus.getStatusText(httpStatus.OK));
+    } catch (error) {
+      if (error instanceof ExceededNumberOfRetriesError) {
+        this.logger.info(`could not close changesets number of retries exceeded`);
       }
       return next(error);
     }
